--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -34,8 +34,8 @@
     "title24":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
     "title25":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
     "title28":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
-    "title29":"Contacta con nosotros",
-    "title30":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
+    "title29":"Contacta conmigo",
+    "title30":"",
     "title31":"Datos de contacto",
     "title32":"Dirección",
     "title33":"Teléfono",
@@ -78,8 +78,8 @@
     "title24":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
     "title25":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
     "title28":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
-    "title29":"Contact Us",
-    "title30":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
+    "title29":"Contact Me",
+    "title30":"",
     "title31":"Contact Info",
     "title32":"Address",
     "title33":"Phome",
