--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -1,7 +1,7 @@
 {
    "es":{
        "home":"Inicio",
-       "Project":"Proyectos ",
+       "project":"Proyectos",
        "contact":"Contacto",
        "Languages":"Idiomas",
        "Download":"Descargar CV",
