--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -1,15 +1,16 @@
 {
    "es":{
        "home":"Inicio",
+       "about":"Sobre mi",
        "project":"Proyectos",
        "contact":"Contacto",
        "Languages":"Idiomas",
        "Download":"Descargar CV",
-       "title1":"Hola, soy",
+       "title1":"Hola, soy Melissa Orellana",
        "title2":"Soy una desarrolladora web front-end",
        "title3":"Sobre mí",
        "title4":"Soy desarrolladora web front end.",
-       "title5":"Lorem ipsum, dolor sit amet consectetur adipisicing elit.Eaque nulla nam similique mollitia. Facere fugit voluptas debitis numquam in, labore fugiat officia vero totam qui perspiciatis harum nam quo nesciunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, nostrum inventore cupiditate ullam officiis voluptatum cumque accusantium quas itaque eaque reiciendis aperiam suscipit quis laboriosam illo explicabo odit reprehenderit debitis.illo explicabo odit reprehenderit debitis illo explicabo <br><br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem impedit recusandae in perferendis, ipsa eligendi. Eum magni neque, rem, eaque consequuntur repellendus praesentium reprehenderit earum incidunt accusamus, perferendis quas iusto.",
+       "title5":"hola",
        "title6":"Nuestros servicios",
        "title7":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        "title8":"Diseño web",
@@ -24,8 +25,8 @@
     "title17":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title18":"Edición de video",
     "title19":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-    "title20":"Nuestro último trabajo",
-    "title21":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
+    "title20":"Proyectos",
+    "title21":"Proyectos que se han realizado",
     "title22":"Ver más",
     "title23":"Testimonios",
     "title24":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
@@ -42,11 +43,12 @@
    },
    "en":{
     "home":"Home",
+    "about":"about",
     "Project":"Project ",
     "contact":"Contact",
     "Languages":"Languages",
     "Download":"Download CV",
-    "title1":"Hello, I'm",
+    "title1":"Hello, I'm Melissa Orellana",
     "title2":"I'm a Front End Web Develover",
     "title3":"About me ",
     "title4":"I'm a Front End Web Develover.",
@@ -65,8 +67,8 @@
     "title17":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title18":"Video Editing",
     "title19":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-    "title20":"Our Latest Work",
-    "title21":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
+    "title20":"Projects",
+    "title21":"Projects that have been carried out",
     "title22":"View More",
     "title23":"Testimonial",
     "title24":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
