--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -3,6 +3,7 @@
        "home":"Inicio",
        "about":"Sobre mi",
        "project":"Proyectos",
+       "publications":"publicaciones",
        "contact":"Contacto",
        "Languages":"Idiomas",
        "Download":"Descargar CV",
@@ -11,7 +12,7 @@
        "title3":"Sobre mí",
        "title4":"Soy desarrolladora web front end.",
        "title5":"hola",
-       "title6":"Nuestros servicios",
+       "title6":"Publicaciones",
        "title7":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        "title8":"Diseño web",
     "title9":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
@@ -45,6 +46,7 @@
     "home":"Home",
     "about":"about",
     "Project":"Project ",
+    "publications":"publications",
     "contact":"Contact",
     "Languages":"Languages",
     "Download":"Download CV",
@@ -53,7 +55,7 @@
     "title3":"About me ",
     "title4":"I'm a Front End Web Develover.",
     "title5":"Lorem ipsum, dolor sit amet consectetur adipisicing elit.Eaque nulla nam similique mollitia. Facere fugit voluptas debitis numquam in, labore fugiat officia vero totam qui perspiciatis harum nam quo nesciunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, nostrum inventore cupiditate ullam officiis voluptatum cumque accusantium quas itaque eaque reiciendis aperiam suscipit quis laboriosam illo explicabo odit reprehenderit debitis.illo explicabo odit reprehenderit debitis illo explicabo <br><br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem impedit recusandae in perferendis, ipsa eligendi. Eum magni neque, rem, eaque consequuntur repellendus praesentium reprehenderit earum incidunt accusamus, perferendis quas iusto.",
-    "title6":"Our Services.",
+    "title6":"publications",
     "title7":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
     "title8":"Web Disign",
     "title9":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
