--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -3,7 +3,7 @@
        "home":"Inicio",
        "about":"Sobre mi",
        "project":"Proyectos",
-       "publications":"publicaciones",
+       "publications":"Publicaciones",
        "contact":"Contacto",
        "Languages":"Idiomas",
        "Download":"Descargar CV",
