--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -8,7 +8,7 @@
        "Languages":"Idiomas",
        "Download":"Descargar CV",
        "title1":"Hola, soy Melissa Orellana",
-       "title2":"Soy una desarrolladora web front-end",
+       "title2":"Soy una estudiante de Ing. en Sistema",
        "title3":"Sobre mí",
        "title4":"Soy desarrolladora web front end.",
        "title5":"hola",
@@ -51,7 +51,7 @@
     "Languages":"Languages",
     "Download":"Download CV",
     "title1":"Hello, I'm Melissa Orellana",
-    "title2":"I'm a Front End Web Develover",
+    "title2":"I am a student of System Engineering",
     "title3":"About me ",
     "title4":"I'm a Front End Web Develover.",
     "title5":"Lorem ipsum, dolor sit amet consectetur adipisicing elit.Eaque nulla nam similique mollitia. Facere fugit voluptas debitis numquam in, labore fugiat officia vero totam qui perspiciatis harum nam quo nesciunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, nostrum inventore cupiditate ullam officiis voluptatum cumque accusantium quas itaque eaque reiciendis aperiam suscipit quis laboriosam illo explicabo odit reprehenderit debitis.illo explicabo odit reprehenderit debitis illo explicabo <br><br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem impedit recusandae in perferendis, ipsa eligendi. Eum magni neque, rem, eaque consequuntur repellendus praesentium reprehenderit earum incidunt accusamus, perferendis quas iusto.",
