--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -8,9 +8,9 @@
        "Languages":"Idiomas",
        "Download":"Descargar CV",
        "title1":"Hola, soy Melissa Orellana",
-       "title2":"Soy una estudiante de Ing. en Sistema",
+       "title2":"Soy una estudiante de Ing.en Sistema",
        "title3":"Sobre mí",
-       "title4":"Soy desarrolladora web front end.",
+       "title4":"Soy estudiante de la universidad Gerardo Barrios de la facultad de ciencia y tecnología y curso la carrera de Ing. en sistemas y redes informáticas y actualmente estoy cursando séptimo ciclo de mi cuarto año universitario.",
        "title5":"hola",
        "title6":"Publicaciones",
        "title7":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
@@ -53,7 +53,7 @@
     "title1":"Hello, I'm Melissa Orellana",
     "title2":"I am a student of System Engineering",
     "title3":"About me ",
-    "title4":"I'm a Front End Web Develover.",
+    "title4":"I am a student at the Gerardo Barrios University of the Faculty of Science and Technology and I am studying Engineering in computer systems and networks and I am currently in the seventh cycle of my fourth year of university.",
     "title5":"Lorem ipsum, dolor sit amet consectetur adipisicing elit.Eaque nulla nam similique mollitia. Facere fugit voluptas debitis numquam in, labore fugiat officia vero totam qui perspiciatis harum nam quo nesciunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, nostrum inventore cupiditate ullam officiis voluptatum cumque accusantium quas itaque eaque reiciendis aperiam suscipit quis laboriosam illo explicabo odit reprehenderit debitis.illo explicabo odit reprehenderit debitis illo explicabo <br><br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem impedit recusandae in perferendis, ipsa eligendi. Eum magni neque, rem, eaque consequuntur repellendus praesentium reprehenderit earum incidunt accusamus, perferendis quas iusto.",
     "title6":"publications",
     "title7":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
