--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -10,7 +10,7 @@
        "title1":"Hola, soy Melissa Orellana",
        "title2":"Soy una estudiante de Ing.en Sistema",
        "title3":"Sobre mí",
-       "title4":".",
+       "title4":"",
        "title5":"Soy estudiante de la universidad Gerardo Barrios de la facultad de ciencia y tecnología y curso la carrera de Ing. en sistemas y redes informáticas y actualmente estoy cursando séptimo ciclo de mi cuarto año universitario",
        "title6":"Publicaciones",
        "title7":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
