--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -8,10 +8,10 @@
        "Languages":"Idiomas",
        "Download":"Descargar CV",
        "title1":"Hola, soy Melissa Orellana",
-       "title2":"Soy una estudiante de Ing.en Sistema",
+       "title2":"Una estudiante de Ing.en Sistema",
        "title3":"Sobre mí",
        "title4":"",
-       "title5":"Soy estudiante de la universidad Gerardo Barrios de la facultad de ciencia y tecnología y curso la carrera de Ing. en sistemas y redes informáticas y actualmente estoy cursando séptimo ciclo de mi cuarto año universitario",
+       "title5":"Estudiante de la universidad Gerardo Barrios de la facultad de ciencia y tecnología y curso la carrera de Ing. en sistemas y redes informáticas y actualmente estoy cursando séptimo ciclo de mi cuarto año universitario",
        "title6":"Publicaciones",
        "title7":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        "title8":"Diseño web",
@@ -51,10 +51,10 @@
     "Languages":"Languages",
     "Download":"Download CV",
     "title1":"Hello, I'm Melissa Orellana",
-    "title2":"I am a student of System Engineering",
+    "title2":"Student of System Engineering",
     "title3":"About me ",
     "title4":"",
-    "title5":"I am a student at the Gerardo Barrios University of the Faculty of Science and Technology and I am studying Engineering in computer systems and networks and I am currently in the seventh cycle of my fourth year of university",
+    "title5":"Student at the Gerardo Barrios University of the Faculty of Science and Technology and I am studying Engineering in computer systems and networks and I am currently in the seventh cycle of my fourth year of university",
     "title6":"publications",
     "title7":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
     "title8":"Web Disign",
