--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -7,8 +7,8 @@
        "contact":"Contacto",
        "Languages":"Idiomas",
        "Download":"Descargar CV",
-       "title1":"Hola, soy Melissa Orellana",
-       "title2":"Una estudiante de Ing.en Sistema",
+       "title1":"Bienvenidos a mi portafolio",
+       "title2":"Soy estudiante de Ing.en Sistema",
        "title3":"Sobre mí",
        "title4":"Nombre: Melissa Estefania Diaz Orellana",
        "title5":"Estudiante de la universidad Gerardo Barrios de la facultad de ciencia y tecnología y curso la carrera de Ing. en sistemas y redes informáticas y actualmente estoy cursando séptimo ciclo de mi cuarto año universitario",
@@ -50,8 +50,8 @@
     "contact":"Contact",
     "Languages":"Languages",
     "Download":"Download CV",
-    "title1":"Hello, I'm Melissa Orellana",
-    "title2":"Student of System Engineering",
+    "title1":"Welcome to my portfolio",
+    "title2":"I am Student of System Engineering",
     "title3":"About me ",
     "title4":"",
     "title5":"Student at the Gerardo Barrios University of the Faculty of Science and Technology and I am studying Engineering in computer systems and networks and I am currently in the seventh cycle of my fourth year of university",
