--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -8,7 +8,7 @@
        "Languages":"Idiomas",
        "Download":"Descargar CV",
        "title1":"Hola, soy Melissa Orellana",
-       "title2":"Una estudiante de Ing.en Sistema",
+       "title2":"Una estudiante de Ing en Sistema",
        "title3":"Sobre mí",
        "title4":"Nombre: Melissa Estefania Diaz Orellana",
        "title5":"Estudiante de la universidad Gerardo Barrios de la facultad de ciencia y tecnología y curso la carrera de Ing. en sistemas y redes informáticas y actualmente estoy cursando séptimo ciclo de mi cuarto año universitario y estoy aprendiendo más sobre la gestión de proyectos y al desarrollo web, también tengo conocimientos básicos sobre la creación de circuitos del área de electrónica y robótica como también de administración de redes y sobre modelaje y animación por computadora.",
