--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -13,7 +13,7 @@
        "title4":"Nombre: Melissa Estefania Diaz Orellana",
        "title5":"Estudiante de la universidad Gerardo Barrios de la facultad de ciencia y tecnología y curso la carrera de Ing. en sistemas y redes informáticas y actualmente estoy cursando séptimo ciclo de mi cuarto año universitario y estoy aprendiendo más sobre la gestión de proyectos y al desarrollo web, también tengo conocimientos básicos sobre la creación de circuitos del área de electrónica y robótica como también de administración de redes y sobre modelaje y animación por computadora.",
        "title6":"Publicaciones",
-       "title7":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
+       "title7":"Mediante vaya avanzando mi formación académica y profesional se van a ir publicando ensayos, artículos u otros elementos escritos por mi persona.",
        "title8":"Diseño web",
     "title9":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title10":"Desarrollo web",
@@ -56,7 +56,7 @@
     "title4":"Name: Melissa Estefania Diaz Orellana",
     "title5":"Student at the Gerardo Barrios University of the Faculty of Science and Technology and I am studying Engineering in computer systems and networks and I am currently in the seventh cycle of my fourth year of university and I am learning more about project management and web development, I also have basic knowledge about the creation of circuits in the area of electronics and robotics as well as network administration and about modeling and computer animation.",
     "title6":"publications",
-    "title7":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
+    "title7":"Through my academic and professional training, essays, articles or other elements written by me will be published.",
     "title8":"Web Disign",
     "title9":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title10":"Web Development",
