--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -13,7 +13,7 @@
        "title4":"Nombre: Melissa Estefania Diaz Orellana",
        "title5":"Estudiante de la universidad Gerardo Barrios de la facultad de ciencia y tecnología y curso la carrera de Ing. en sistemas y redes informáticas y actualmente estoy cursando séptimo ciclo de mi cuarto año universitario y estoy aprendiendo más sobre la gestión de proyectos y al desarrollo web, también tengo conocimientos básicos sobre la creación de circuitos del área de electrónica y robótica como también de administración de redes y sobre modelaje y animación por computadora.",
        "title6":"Publicaciones",
-       "title7":"Mediante vaya avanzando mi formación académica y profesional se van a ir publicando ensayos, artículos u otros elementos escritos por mi persona en este momento esta seccion esta enmantenimiento en este momento esta sección esta en mantenimiento.",
+       "title7":"Mediante vaya avanzando mi formación académica y profesional se van a ir publicando ensayos, artículos u otros elementos escritos por mi persona en este momento esta sección esta en mantenimiento.",
        "title8":"Diseño web",
     "title9":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title10":"Desarrollo web",
