--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -15,7 +15,7 @@
        "title6":"Publicaciones",
        "title7":"Mediante vaya avanzando mi formación académica y profesional se van a ir publicando ensayos, artículos u otros elementos escritos por mi persona en este momento esta sección se encuentra en mantenimiento.",
        "title8":"Diseño web",
-    "title9":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+    "title9":"El diseño web es una actividad que consiste en la planificación, diseño, implementación y mantenimiento de sitios web..",
     "title10":"Desarrollo web",
     "title11":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title12":"Aplicación Android",
