--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -15,9 +15,9 @@
        "title6":"Publicaciones",
        "title7":"Mediante vaya avanzando mi formación académica y profesional se van a ir publicando ensayos, artículos u otros elementos escritos por mi persona en este momento esta sección se encuentra en mantenimiento.",
        "title8":"Diseño web",
-    "title9":"El diseño web es una actividad que consiste en la planificación, diseño, implementación y mantenimiento de sitios web..",
+    "title9":"El diseño web es una actividad que consiste en la planificación, diseño, implementación y mantenimiento de sitios web.",
     "title10":"Desarrollo web",
-    "title11":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+    "title11":"Desarrollo web significa construir y mantener sitios web; es el trabajo que tiene lugar en un segundo plano y que permite que una web tenga una apariencia impecable, un funcionamiento rápido y un buen desempeño para permitir la mejor experiencia de usuario.",
     "title12":"Aplicación Android",
     "title13":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title14":"Fotografía",
@@ -58,9 +58,9 @@
     "title6":"publications",
     "title7":"As my academic and professional training progress, essays, articles or other elements written by me will be published at this time this section is under maintenance.",
     "title8":"Web Disign",
-    "title9":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+    "title9":"Web design is an activity that consists of the planning, design, implementation and maintenance of websites.",
     "title10":"Web Development",
-    "title11":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+    "title11":"Web development means building and maintaining websites; it is the work that takes place in the background and that allows a website to have an impeccable appearance, a fast operation and a good performance to allow the best user experience.",
     "title12":"Android App",
     "title13":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title14":"Photography",
