--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -15,7 +15,7 @@
        "title6":"Publicaciones",
        "title7":"Mediante vaya avanzando mi formación académica y profesional se van a ir publicando ensayos, artículos u otros elementos escritos por mi persona en este momento esta sección se encuentra en mantenimiento.",
        "title8":"Diseño web",
-    "title9":"El diseño web es una actividad que consiste en la planificación, diseño, implementación y mantenimiento de sitios web.",
+    "title9":"El diseño web es una actividad que consiste en la planificación, diseño, implementación y mantenimiento de sitios web. No es simplemente la implementación del diseño convencional ya que se abarcan diferentes aspectos como el diseño gráfico web, diseño de interfaz y experiencia de usuario, como la navegabilidad, interactividad, usabilidad, arquitectura de la información.",
     "title10":"Desarrollo web",
     "title11":"Desarrollo web significa construir y mantener sitios web; es el trabajo que tiene lugar en un segundo plano y que permite que una web tenga una apariencia impecable, un funcionamiento rápido y un buen desempeño para permitir la mejor experiencia de usuario.",
     "title12":"Aplicación Android",
