--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -17,7 +17,7 @@
        "title8":"Diseño web",
     "title9":"El diseño web es una actividad que consiste en la planificación, diseño, implementación y mantenimiento de sitios web. No es simplemente la implementación del diseño convencional ya que se abarcan diferentes aspectos como el diseño gráfico web, diseño de interfaz y experiencia de usuario, como la navegabilidad, interactividad, usabilidad, arquitectura de la información.",
     "title10":"Desarrollo web",
-    "title11":"Desarrollo web significa construir y mantener sitios web; es el trabajo que tiene lugar en un segundo plano y que permite que una web tenga una apariencia impecable, un funcionamiento rápido y un buen desempeño para permitir la mejor experiencia de usuario.",
+    "title11":"Desarrollo web es un término que define la creación de sitios web para Internet o una intranet. Para conseguirlo se hace uso de tecnologías de software del lado del servidor y del cliente que involucran una combinación de procesos de base de datos con el uso de un navegador web a fin de realizar determinadas tareas o mostrar información.",
     "title12":"Aplicación Android",
     "title13":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title14":"Fotografía",
@@ -58,9 +58,9 @@
     "title6":"publications",
     "title7":"As my academic and professional training progress, essays, articles or other elements written by me will be published at this time this section is under maintenance.",
     "title8":"Web Disign",
-    "title9":"Web design is an activity that consists of the planning, design, implementation and maintenance of websites.",
+    "title9":"Web design is an activity that consists of the planning, design, implementation and maintenance of websites. It is not simply the implementation of conventional design since different aspects such as web graphic design, interface design and user experience are covered, such as navigability, interactivity, usability, information architecture.",
     "title10":"Web Development",
-    "title11":"Web development means building and maintaining websites; it is the work that takes place in the background and that allows a website to have an impeccable appearance, a fast operation and a good performance to allow the best user experience.",
+    "title11":"Web development is a term that defines the creation of websites for the Internet or an intranet. To achieve this, use is made of software technologies on the server and client sides that involve a combination of database processes with the use of a web browser in order to perform certain tasks or display information.",
     "title12":"Android App",
     "title13":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title14":"Photography",
