--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -27,8 +27,8 @@
     "title18":"Edición de video",
     "title19":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title20":"Proyectos",
-    "title21":"Proyectos que se han realizado",
-    "title22":"Ver más",
+    "title21":"Agro Producers Web App de ventas agrícolas como gestor",
+    "title22":"Ver másmmmmmmm",
     "title23":"Testimonios",
     "title24":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
     "title25":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
