--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -27,7 +27,7 @@
     "title18":"Edición de video",
     "title19":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title20":"Proyectos",
-    "title21":"Agro Producers Web App de ventas agrícolas como gestor",
+    "title21":"Agro Producers",
     "title22":"Ver másmmmmmmm",
     "title23":"Testimonios",
     "title24":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
