--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -25,7 +25,7 @@
     "title16":"Redacción de contenido",
     "title17":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title18":"Edición de video",
-    "title19":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+    "title19":"Algunos en los cuales eh trabajado.",
     "title20":"Proyectos",
     "title21":"Agro Producers",
     "title22":"Ver másmmmmmmm",
