--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -28,7 +28,7 @@
     "title19":"Algunos en los cuales eh trabajado.",
     "title20":"Proyectos",
     "title21":"Agro Producers",
-    "title22":"Ver másmmmmmmm",
+    "title22":"Forme parte del área de gestión en el desarrollo del proyecto el cual está basado para ayudar a los productores agrícolas a poder comercializar sus productos mediante la app web.",
     "title23":"Testimonios",
     "title24":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
     "title25":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
