--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -70,8 +70,8 @@
     "title18":"Video Editing",
     "title19":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title20":"Projects",
-    "title21":"Projects that have been carried out",
-    "title22":"View More",
+    "title21":"Agro Producers",
+    "title22":"Be part of the management area in the development of the project which is based to help agricultural producers to be able to market their products through the web app.",
     "title23":"Testimonial",
     "title24":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
     "title25":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
