--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -25,7 +25,7 @@
     "title16":"Redacción de contenido",
     "title17":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title18":"Edición de video",
-    "title19":"Algunos en los cuales eh trabajado.",
+    "title19":"",
     "title20":"Proyectos",
     "title21":"Agro Producers",
     "title22":"Forme parte del área de gestión en el desarrollo del proyecto el cual está basado para ayudar a los productores agrícolas a poder comercializar sus productos mediante la app web.",
@@ -68,7 +68,7 @@
     "title16":"Content Writing",
     "title17":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
     "title18":"Video Editing",
-    "title19":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+    "title19":"",
     "title20":"Projects",
     "title21":"Agro Producers",
     "title22":"Be part of the management area in the development of the project which is based to help agricultural producers to be able to market their products through the web app.",
