--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -29,7 +29,7 @@
     "title20":"Proyectos",
     "title21":"Agro Producers",
     "title22":"Forme parte del área de gestión en el desarrollo del proyecto el cual está basado para ayudar a los productores agrícolas a poder comercializar sus productos mediante la app web.",
-    "title23":"Testimonios",
+    "title23":"Generador de energía ",
     "title24":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
     "title25":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
     "title28":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
@@ -72,7 +72,7 @@
     "title20":"Projects",
     "title21":"Agro Producers",
     "title22":"Be part of the management area in the development of the project which is based to help agricultural producers to be able to market their products through the web app.",
-    "title23":"Testimonial",
+    "title23":"Energy generator",
     "title24":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
     "title25":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
     "title28":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
