--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -30,7 +30,7 @@
     "title21":"Agro Producers",
     "title22":"Forme parte del área de gestión en el desarrollo del proyecto el cual está basado para ayudar a los productores agrícolas a poder comercializar sus productos mediante la app web.",
     "title23":"Generador de energía ",
-    "title24":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
+    "title24":"Creación desde cero de la fuente de energía la cual se realizó en las práctica de la materia electrónica análoga en la cual participe en su creación ya que fue creada por un grupo de trabajo del cual forme parte.",
     "title25":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
     "title28":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
     "title29":"Contacta conmigo",
@@ -73,7 +73,7 @@
     "title21":"Agro Producers",
     "title22":"Be part of the management area in the development of the project which is based to help agricultural producers to be able to market their products through the web app.",
     "title23":"Energy generator",
-    "title24":"Lorem ipsum dolor sit amet consectetur adipisicing elit.",
+    "title24":"Creation from scratch of the energy source which was carried out in the practice of analog electronic matter in which it participated in its creation since it was created by a working group of which it is a part.",
     "title25":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
     "title28":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
     "title29":"Contact Me",
