--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -31,8 +31,8 @@
     "title22":"Forme parte del área de gestión en el desarrollo del proyecto el cual está basado para ayudar a los productores agrícolas a poder comercializar sus productos mediante la app web y que los usuarios puedan ingresar hacer sus compras.",
     "title23":"Generador de energía ",
     "title24":"Creación desde cero de la fuente de energía la cual se realizó en las prácticas de la materia electrónica análoga en la cual participe en su creación ya que fue creada por un grupo de trabajo del cual forme parte.",
-    "title25":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
-    "title28":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
+    "title25":"DevEvaluación",
+    "title28":"Forme parte del área de gestión en el desarrollo del proyecto el cual está basado en la evaluación de historias de usuarios con estándares ISO 25010.",
     "title29":"Contacta conmigo",
     "title30":"",
     "title31":"Datos de contacto",
@@ -74,8 +74,8 @@
     "title22":"Be part of the management area in the development of the project which is based to help agricultural producers to be able to market their products through the web app and that users can enter to make their purchases.",
     "title23":"Energy generator",
     "title24":"Creation from scratch of the energy source which was carried out in the practices of the analog electronic matter in which I participated in its creation since it was created by a working group of which it is part.",
-    "title25":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
-    "title28":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor modi perspiciatis!",
+    "title25":"DevEvaluation",
+    "title28":"Be part of the management area in the development of the project which is based on the evaluation of user stories with ISO 25010 standards.",
     "title29":"Contact Me",
     "title30":"",
     "title31":"Contact Info",
