--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -7,6 +7,7 @@
        "contact":"Contacto",
        "Languages":"Idiomas",
        "Download":"Descargar CV",
+       "more":"more",
        "title1":"Hola, soy Melissa Orellana",
        "title2":"Una estudiante de Ing en Sistema",
        "title3":"Sobre mí",
@@ -50,6 +51,7 @@
     "contact":"Contact",
     "Languages":"Languages",
     "Download":"Download CV",
+    "more":"leer mas",
     "title1":"Hello, I'm Melissa Orellana",
     "title2":"Student of System Engineering",
     "title3":"About me ",
