--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -14,7 +14,7 @@
       "title4": "Melissa Estefania Diaz Orellana",
       "title5": "Estudiante de ingeniería en sistemas y redes informáticas, actualmente esta cursando su cuarto año de la carrera, ha aprendido sobre la gestión de proyectos y sigue expandiendo el aprendizaje, también un poco sobre desarrollo web, está interesada en la maquetación de sitios y aplicaciones web de lo cual piensa en un futuro especializarse en la maquetación web.      También tiene un conocimiento básico acerca de los circuitos electrónicos y robótica, conocimientos acerca de la creación y administración de base de datos SQL y NoSQL como pueden ser MySQL Server, SQL server, Oracle, Casandra DB.      Posee conocimientos básicos sobre lo que es modelaje y animación por computadora.      Tiene muchas metas propuestas pero la principal por ahora esta en graduarse de ingeniería en sistemas y redes informáticas y poder desenvolverse en el ámbito laboral",
       "title6": "Publicaciones",
-      "title7": "Mediante vaya avanzando mi formación académica y profesional se van a ir publicando ensayos, artículos u otros elementos escritos por mi persona en este momento esta sección se encuentra en mantenimiento.",
+      "title7": "A continuación estaran algunos documentos o ensayos en los  que e contribuido para algunos proyectos.",
       "title8": "Diseño web",
       "title9": "El diseño web es una actividad que consiste en la planificación, diseño, implementación y mantenimiento de sitios web. No es simplemente la implementación del diseño convencional ya que se abarcan diferentes aspectos como el diseño gráfico web, diseño de interfaz y experiencia de usuario, como la navegabilidad, interactividad, usabilidad, arquitectura de la información.",
       "title10": "Desarrollo web",
@@ -57,7 +57,7 @@
       "title4": "Melissa Estefania Diaz Orellana",
       "title5": "Engineering student in computer systems and networks, currently in her fourth year of the degree, she has learned about project management and continues to expand her learning, also a little about web development, she is interested in the layout of websites and web applications of which thinks in the future specializing in web layout. He also has a basic knowledge about electronic circuits and robotics, knowledge of the creation and administration of SQL and NoSQL databases such as: MySQL Server, SQL server, Oracle, Casandra DB. Has basic knowledge of what is computer modeling and animation. He has many proposed goals but the main one for now is to graduate in engineering in computer systems and networks and to be able to function in the workplace",
       "title6": "publications",
-      "title7": "As my academic and professional training progress, essays, articles or other elements written by me will be published at this time this section is under maintenance.",
+      "title7": "Below are some of the papers or essays I have contributed to projects.",
       "title8": "Web Disign",
       "title9": "Web design is an activity that consists of the planning, design, implementation and maintenance of websites. It is not simply the implementation of conventional design since different aspects such as web graphic design, interface design and user experience are covered, such as navigability, interactivity, usability, information architecture.",
       "title10": "Web Development",
