--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -14,7 +14,7 @@
       "title4": "Melissa Estefania Diaz Orellana",
       "title5": "Estudiante de ingeniería en sistemas y redes informáticas, actualmente cursa el cuarto año de la carrera, ha aprendido sobre gestión de proyectos y sigue ampliando su aprendizaje, también un poco sobre desarrollo web, le interesa la maquetación de sitios y aplicaciones web. También tiene conocimientos básicos sobre circuitos electrónicos y robótica, conocimientos de creación y administración de bases de datos SQL y NoSQL como: MySQL Server, SQL server, Oracle, Casandra DB. Tiene conocimientos básicos de lo que es el modelado y la animación por ordenador. Tiene muchas metas propuestas pero la principal por ahora es graduarse en ingeniería en sistemas informáticos y redes y poder desempeñarse en el ámbito laboral",
       "title6": "Publicaciones",
-      "title7": "A continuación estaran algunos documentos o ensayos en los  que e contribuido para algunos proyectos.",
+      "title7": "A continuación estarán algunos documentos o ensayos en los que he contribuido para algunos proyectos.",
       "title8": "Diseño web",
       "title9": "El diseño web es una actividad que consiste en la planificación, diseño, implementación y mantenimiento de sitios web. No es simplemente la implementación del diseño convencional ya que se abarcan diferentes aspectos como el diseño gráfico web, diseño de interfaz y experiencia de usuario, como la navegabilidad, interactividad, usabilidad, arquitectura de la información.",
       "title10": "Desarrollo web",
